<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_gallery" />
-->



        <item
            android:id="@+id/nav_cmarque"
            android:icon="@drawable/addaa"
            android:title="@string/menu_Cmarque" />
        <item
            android:id="@+id/nav_gmarque"
            android:icon="@drawable/baseline_filter_list_24"
            android:title="@string/menu_Gmarque" />
        <item
            android:id="@+id/nav_cmachine"
            android:icon="@drawable/machine"
            android:title="@string/menu_Cmachine" />
        <item
            android:id="@+id/nav_gmachine"
            android:icon="@drawable/baseline_filter_list_24"
            android:title="@string/menu_Gmachine" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_query_stats_24"

            android:title="@string/menu_slideshow" />

    </group>
</menu>